# arabic_comic_generator

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
data/: dspy_comic_script_program.json  dspy_training_pairs.json  optimized_comic_program.json
src/generation/: __init__.py  context.py  dspy_optimize.py  images.py  optimize_dspy.py  script.py  script_dspy.py  script_prompts.py
src/panel/: __init__.py
src/panel/layout/: __init__.py  page.py
src/panel/text_bubble/: __init__.py  bubble_detector.py  bubble_placer.py  bubble_renderer.py  text.py
src/pipeline/: __init__.py  __main__.py  main_pipeline.py
src/utils/: __init__.py  cache.py  clients.py  config.py  logger.py  schemas.py
ui/: package.json
ui/app/: globals.css  layout.js  page.js
ui/app/api/generate/: route.js
ui/components/: MainContent.js  Sidebar.js
ui/lib/: timeouts.js
