[project]
name = "arabic-comic-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "google-genai",
    "pillow",
    "requests",
    "python-dotenv",
    "huggingface-hub>=0.20.0",
    "diffusers>=0.37.1",
    "transformers>=5.3.0",
    "accelerate>=1.13.0",
    "torch>=2.10.0",
    "dspy>=2.5",
]

[project.scripts]
comic_pipeline = "src.pipeline.__main__:main"
comic-dspy-optimize = "src.generation.dspy_optimize:main"
